<resources>
    <string name="app_name">leledometro</string>
    <string name="title_home">Αρχική</string>
    <string name="title_calendar">Ημερολόγιο</string>
    <string name="title_profile">Προφίλ</string>
    <string name="default_name">Νέοος</string>
    <string name="days_label">και σήμερα</string>
    <string name="free_days">Άδειες</string>
    <string name="penalties">Ποινές</string>
    <string name="services">Υπηρεσίες</string>
    <string name="camp_label">Μονάδα:</string>
    <string name="esso_label">ΕΣΣΟ:</string>
    <string name="save">Αποθήκευση</string>
    <string name="default_days_value">-</string>
    <string name="default_grade_value">-</string>
    <string name="default_camp_value">-</string>
    <string name="default_esso_value">-</string>
    <string name="default_free_days_value">0</string>
    <string name="default_penalties_value">0</string>
    <string name="default_services_value">0</string>
    <string name="add_free_day_label">Πρόσθεσε Άδεια</string>
    <string name="add_penalty_label">Πρόσθεσε Ποινή</string>
    <string name="add_service_label">Πρόσθεσε Υπηρεσία</string>
    <string name="name">Όνομα</string>
    <string name="start_date">Παρουσίαση</string>
    <string name="end_date">Απόλυση</string>
    <string name="esso">ΕΣΣΟ</string>
    <string name="army_type">Ένοπλη Δύναμη</string>
    <string name="camp">Μονάδα</string>
    <string name="corps">Σώμα</string>
    <string name="army_number">Α.Σ.Μ.Α.</string>
    <string name="default_start_date_value">-</string>
    <string name="default_end_date_value">-</string>
    <string name="force">Ένοπλη Δύναμη</string>
    <string name="default_force_value">-</string>
    <string name="clear">Εκκαθάριση</string>
    <string name="copyright">&#xA9; Sotiris Sotiriou</string>
</resources>