<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="6dp"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">


        <TextView
            android:id="@+id/txt_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Στοιχεία Οπλίτη"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_info" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider1">

            <ImageView
                android:id="@+id/img_profile_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:theme="@style/EditTextThemeOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_edit_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corners_rectangle_green"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/start_date"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/txt_start_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_name" />


        <TextView
            android:id="@+id/txt_start_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/default_start_date_value"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_edit_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_edit_start_date"
            app:layout_constraintTop_toTopOf="@id/btn_edit_start_date" />


        <Button
            android:id="@+id/btn_edit_end_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corners_rectangle_green"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/end_date"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_edit_start_date"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit_start_date" />


        <TextView
            android:id="@+id/txt_end_date"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:text="@string/default_end_date_value"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_edit_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_edit_end_date"
            app:layout_constraintTop_toTopOf="@id/btn_edit_end_date" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_esso"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:theme="@style/EditTextThemeOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_edit_end_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_edit_esso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/green"
                android:ems="10"
                android:hint="@string/esso"
                android:inputType="text"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>


        <Spinner
            android:id="@+id/spinner_edit_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/black_rectangle_border"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_esso" />


        <Spinner
            android:id="@+id/spinner_edit_force"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/black_rectangle_border"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner_edit_grade" />


        <!--        <Button-->
        <!--            android:id="@+id/btn_edit_force"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="32dp"-->
        <!--            android:layout_marginTop="32dp"-->
        <!--            android:text="@string/force"-->
        <!--            android:textColor="@color/white"-->
        <!--            android:textSize="16sp"-->
        <!--            android:textStyle="bold"-->
        <!--            android:background="@drawable/rounded_corners_rectangle_green"-->
        <!--            app:layout_constraintEnd_toStartOf="@+id/txt_force"-->
        <!--            app:layout_constraintHorizontal_bias="0.0"-->
        <!--            app:layout_constraintHorizontal_chainStyle="packed"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/layout_edit_esso" />-->


        <!--        <TextView-->
        <!--            android:id="@+id/txt_force"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_marginStart="32dp"-->
        <!--            android:layout_marginEnd="32dp"-->
        <!--            android:foregroundGravity="center"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/default_force_value"-->
        <!--            android:textSize="20sp"-->
        <!--            app:layout_constraintBottom_toBottomOf="@id/btn_edit_force"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/btn_edit_force"-->
        <!--            app:layout_constraintTop_toTopOf="@id/btn_edit_force" />-->


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_camp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:theme="@style/EditTextThemeOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_edit_force">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_edit_camp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/green"
                android:ems="10"
                android:hint="@string/camp"
                android:inputType="text"
                android:padding="10dp" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edit_number"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:theme="@style/EditTextThemeOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_camp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_edit_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/green"
                android:ems="10"
                android:hint="@string/army_number"
                android:inputType="text"
                android:padding="10dp" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_corners_rectangle_green"
            android:padding="25dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/btn_clear"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_number" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_corners_rectangle_red"
            android:padding="25dp"
            android:text="@string/clear"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/btn_save"
            app:layout_constraintTop_toBottomOf="@+id/layout_edit_number" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_clear_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:src="@drawable/ic_backspace_48dp"
            app:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/txt_start_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txt_start_date"
            app:layout_constraintTop_toTopOf="@+id/txt_start_date" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_clear_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:src="@drawable/ic_backspace_48dp"
            app:backgroundTint="@color/red"
            app:layout_constraintBottom_toBottomOf="@+id/txt_end_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/txt_end_date"
            app:layout_constraintTop_toTopOf="@+id/txt_end_date" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


